--- a/playground/ollama_json.ipynb
+++ b/playground/ollama_json.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-17T19:52:01.018368Z",
-     "start_time": "2024-06-17T19:52:00.478137Z"
+     "end_time": "2024-06-17T20:39:10.549997Z",
+     "start_time": "2024-06-17T20:39:10.546132Z"
     }
    },
    "source": [
@@ -18,13 +18,13 @@
     "import instructor"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-17T19:52:01.024227Z",
-     "start_time": "2024-06-17T19:52:01.020861Z"
+     "end_time": "2024-06-17T20:39:12.206291Z",
+     "start_time": "2024-06-17T20:39:12.202207Z"
     }
    },
    "cell_type": "code",
@@ -36,19 +36,19 @@
    ],
    "id": "9dec0553d8b6e1d3",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 4
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "ollama pull command-r:latest",
+   "source": "ollama pull llama3",
    "id": "905aaa447fc98e94"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-17T19:42:13.984163Z",
-     "start_time": "2024-06-17T19:41:59.515193Z"
+     "end_time": "2024-06-17T20:40:22.086149Z",
+     "start_time": "2024-06-17T20:40:15.806212Z"
     }
    },
    "cell_type": "code",
@@ -61,17 +61,7 @@
     "    ),\n",
     "    mode=instructor.Mode.JSON,\n",
     ")\n",
-    "\n",
-    "resp = client.chat.completions.create(\n",
-    "    model=\"command-r:latest\",\n",
-    "    messages=[\n",
-    "        {\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": \"Tell me about the Harry Potter\",\n",
-    "        }\n",
-    "    ],\n",
-    "    response_model=Character,\n",
-    ")"
+    "\n"
    ],
    "id": "308abc57490df355",
    "outputs": [],
@@ -80,12 +70,25 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-17T19:42:13.990914Z",
-     "start_time": "2024-06-17T19:42:13.986314Z"
+     "end_time": "2024-06-17T20:45:18.360327Z",
+     "start_time": "2024-06-17T20:45:13.037737Z"
     }
    },
    "cell_type": "code",
-   "source": "print(resp.model_dump_json(indent=2))",
+   "source": [
+    "resp = client.chat.completions.create(\n",
+    "    model=\"llama3\",\n",
+    "    messages=[\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": \"Tell me 10 facts about the Harry Potter\",\n",
+    "        }\n",
+    "    ],\n",
+    "    response_model=Character,\n",
+    ")\n",
+    "\n",
+    "print(resp.model_dump_json(indent=4))"
+   ],
    "id": "a5ffb1994141df5b",
    "outputs": [
     {
@@ -93,20 +96,20 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"name\": \"Harry James Potter\",\n",
-      "  \"age\": 32,\n",
-      "  \"fact\": [\n",
-      "    \"Harry is a wizard and the primary protagonist of the series.\",\n",
-      "    \"He initially lived in the cupboard under the stairs at his aunt and uncle's house.\",\n",
-      "    \"At Hogwarts, he was sorted into Gryffindor House and developed many close friendships, including Ron Weasley and Hermione Granger.\",\n",
-      "    \"Harry defeated Lord Voldemort, a powerful dark wizard responsible for the deaths of his parents.\",\n",
-      "    \"He discovered that he is famous in the Wizarding World due to his survival of Voldemort's killing curse as an infant, earning him the nickname 'The Boy Who Lived.'\"\n",
-      "  ]\n",
+      "    \"name\": \"Harry Potter\",\n",
+      "    \"age\": 22,\n",
+      "    \"fact\": [\n",
+      "        \"The Hogwarts School of Witchcraft and Wizardry is based on Edinburgh University in Scotland.\",\n",
+      "        \"Hagrid, the gamekeeper, was originally supposed to be an antagonist.\",\n",
+      "        \"There are over 1 billion copies of Harry Potter books sold worldwide.\",\n",
+      "        \"Harry Potter has been translated into over 80 languages.\",\n",
+      "        \"Dumbledore's wand is made from the wood of a rare and ancient tree called 'Holly'.\"\n",
+      "    ]\n",
       "}\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 11
   }
  ],
  "metadata": {
