--- a/karpathy/lecture1/micrograd_lecture_first_half_roughly.ipynb
+++ b/karpathy/lecture1/micrograd_lecture_first_half_roughly.ipynb
@@ -3,9 +3,8 @@
   {
    "cell_type": "code",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-17T19:54:07.326554Z",
-     "start_time": "2024-06-17T19:54:06.041067Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -15,7 +14,7 @@
     "%matplotlib inline"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "cell_type": "code",
