--- a/playground/ollama_tools.ipynb
+++ b/playground/ollama_tools.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-20T19:57:36.193408Z",
-     "start_time": "2024-08-20T19:57:36.189010Z"
+     "end_time": "2024-08-20T20:08:27.125044Z",
+     "start_time": "2024-08-20T20:08:27.121715Z"
     }
    },
    "source": [
@@ -20,7 +20,10 @@
     "\n",
     "# Simulates an API call to get flight times\n",
     "# In a real application, this would fetch data from a live database or API\n",
+    "\n",
     "def get_flight_times(departure: str, arrival: str) -> str:\n",
+    "    print(f\"Debug: get_flight_times called with departure='{departure}', arrival='{arrival}'\")  # Debug print statement\n",
+    "\n",
     "    flights = {\n",
     "        'NYC-LAX': {'departure': '08:00 AM', 'arrival': '11:30 AM', 'duration': '5h 30m'},\n",
     "        'LAX-NYC': {'departure': '02:00 PM', 'arrival': '10:30 PM', 'duration': '5h 30m'},\n",
@@ -31,17 +34,22 @@
     "    }\n",
     "\n",
     "    key = f'{departure}-{arrival}'.upper()\n",
-    "    return json.dumps(flights.get(key, {'error': 'Flight not found'}))\n",
+    "    result = flights.get(key, {'error': 'Flight not found'})\n",
+    "    print(f\"Debug: Retrieved flight data: {result}\")  # Debug print statement\n",
+    "\n",
+    "    return json.dumps(result)\n",
+    "\n",
+    "# Assuming the rest of the code remains the same where you handle these functions and make calls to `get_flight_times`.\n",
     "\n"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-20T19:58:09.574096Z",
-     "start_time": "2024-08-20T19:58:09.569915Z"
+     "end_time": "2024-08-20T20:08:29.020534Z",
+     "start_time": "2024-08-20T20:08:29.015510Z"
     }
    },
    "cell_type": "code",
@@ -111,13 +119,13 @@
    ],
    "id": "f9c046b0b853827a",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-20T20:01:35.008853Z",
-     "start_time": "2024-08-20T20:01:26.223963Z"
+     "end_time": "2024-08-20T20:08:33.618070Z",
+     "start_time": "2024-08-20T20:08:31.828124Z"
     }
    },
    "cell_type": "code",
@@ -128,11 +136,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The flight time from New York (NYC) to Los Angeles (LAX) is approximately 5 hours and 30 minutes. However, please note that this may vary depending on the specific flight schedule and airline. It's always best to check with your airline or a flight search engine like Google Flights for the most up-to-date and accurate information.\n"
+      "Debug: get_flight_times called with departure='NYC', arrival='LAX'\n",
+      "Debug: Retrieved flight data: {'departure': '08:00 AM', 'arrival': '11:30 AM', 'duration': '5h 30m'}\n",
+      "The flight time from New York (NYC) to Los Angeles (LAX) is approximately 5 hours and 30 minutes.\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 17
   }
  ],
  "metadata": {
